# pibootctl

./: .gitignore  Makefile  README.rst  copyrights  design.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
debian/: changelog  control  copyright  pibootctl-doc.doc-base  pibootctl.install  rules  watch
debian/completions/: pibootctl
debian/etc/: pibootctl.conf  pibootctl.template
debian/source/: options
docs/: Makefile  api.rst  api_exc.rst  api_files.rst  api_formatter.rst  api_info.rst  api_main.rst  api_parser.rst  api_setting.rst  api_settings.rst  api_store.rst  api_term.rst  api_userstr.rst  changelog.rst  commands.rst  conf.py  development.rst  diff.rst  get.rst  guides.rst  help.rst  index.rst  install.rst  license.rst  list.rst  load.rst  manual.rst  pibootctl.rst  pictl.rst  remove.rst  rename.rst  save.rst  set.rst  show.rst  status.rst  usage.rst
docs/_static/: style_override.css
docs/images/: setting_hierarchy.dot
pibootctl/: __init__.py  corrections.py  exc.py  files.py  formatter.py  info.py  main.py  output.py  parser.py  setting.py  settings.py  store.py  term.py  userstr.py
pictl/: __init__.py  components.py  files.py  formats.py  formatter.py  info.py  main.py  output.py  parser.py  setting.py  settings.py  store.py  term.py  tools.py  userstr.py
tests/: test_corrections.py  test_files.py  test_formatter.py  test_info.py  test_main.py  test_output.py  test_parser.py  test_setting.py  test_settings.py  test_store.py  test_term.py  test_tools.py  test_userstr.py
