# coding: utf-8
[metadata]
name = pictl
version = 0.1
description = Boot configuration tool for the Raspberry Pi
long_description = file: README.rst
author = Dave Jones
author_email = dave@waveform.org.uk
project_urls =
    Documentation = https://pictl.readthedocs.io/
    Source Code = https://github.com/waveform80/pictl
    Issue Tracker = https://github.com/waveform80/pictl/issues
license = MIT
keywords = raspberry pi boot
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Boot

[options]
packages = find:
install_requires =
    pyyaml

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    pkginfo

[options.entry_points]
console_scripts =
    pictl = pictl.main:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = pictl
branch = true

[coverage:report]
show_missing = true
