# coding: utf-8
[metadata]
name = pibootctl
version = 0.5.2
description = Boot configuration tool for the Raspberry Pi
long_description = file: README.rst
author = Dave Jones
author_email = dave@waveform.org.uk
project_urls =
    Documentation = https://pibootctl.readthedocs.io/
    Source Code = https://github.com/waveform80/pibootctl
    Issue Tracker = https://github.com/waveform80/pibootctl/issues
keywords = raspberry pi boot
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Boot

[options]
packages = find:
install_requires =
    setuptools
    pkginfo
    pyyaml

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx

[options.entry_points]
console_scripts =
    pibootctl = pibootctl.main:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = pibootctl
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False
